Allow text alignment in table to wrap, and fixed issues of feedback showing for editing profile details

--- a/css/gui.css
+++ b/css/gui.css
@@ -138,3 +138,10 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+th, td{
+  word-wrap: break-word;
+  min-width: 5%;
+  max-width: 5%;
+  white-space: normal;
+}
